# rust-dvb

./: .gitignore  BENCHMARKS.md  CLAUDE.md  Cargo.toml  README.md  rust-analyzer.toml
dvb-bbframe/: CHANGELOG.md  Cargo.toml  README.md  TODO.md
dvb-bbframe/benches/: bbframe_hot_paths.rs
dvb-bbframe/docs/: README.md  dvb_s2_spec.md  dvb_s2x_spec.md  dvb_t2_spec.md  en_302_307_1_s2.md  en_302_307_2_s2x.md  en_302_755_t2.md
dvb-bbframe/src/: crc.rs  error.rs  header.rs  issy.rs  lib.rs  packet.rs  pump.rs
dvb-bbframe/tests/: integration_fixture.rs  serde_round_trip.rs
dvb-bbframe/tests/fixtures/: tnt-5w-12732v-bbframe.ts
dvb-common/: CHANGELOG.md  Cargo.toml  README.md
dvb-common/benches/: crc32.rs
dvb-common/src/: bcd.rs  bits.rs  crc32_mpeg2.rs  lib.rs  time.rs  traits.rs
dvb-common/tests/: crc32_mpeg2.rs
dvb-conformance/: CHANGELOG.md  Cargo.toml
dvb-conformance/src/: lib.rs  tests.rs
dvb-scte35/: CHANGELOG.md  Cargo.toml  README.md
dvb-scte35/spec_tables/: segmentation_type_id.toml
dvb-scte35/src/: error.rs  lib.rs  section.rs  time.rs  traits.rs
dvb-scte35/src/commands/: any.rs  bandwidth_reservation.rs  mod.rs  private_command.rs  splice_insert.rs  splice_null.rs  splice_schedule.rs  time_signal.rs
dvb-scte35/src/descriptors/: any.rs  audio.rs  avail.rs  dtmf.rs  header.rs  mod.rs  segmentation.rs  segmentation_enums.rs  time.rs
dvb-scte35/tests/: known_vectors.rs  round_trip.rs  serde_round_trip.rs  spec_drift.rs  spec_samples.rs
dvb-si/: CHANGELOG.md  Cargo.toml  MIGRATION-3.0.md  MIGRATION-4.0.md  README.md  build.rs
dvb-si/benches/: si_hot_paths.rs
dvb-si/docs/: INDEX.md  README.md  en_300_468.md  en_301_192.md  glossary.md  iso_13818_1_systems.md  overview.md  spec.md  ts_101_154_av_coding.md  ts_102_006_ssu.md  ts_102_323_tva.md  ts_102_809_apps.md
dvb-si/docs/annexes/: annex_b.md  annex_d.md  annex_e.md  annex_f.md  annex_g.md  annex_h.md  annex_i.md  annex_j.md  annex_k.md
dvb-si/docs/crc/: annex_c.md
dvb-si/docs/descriptors/: 0x02-video_stream.md  0x03-audio_stream.md  0x04-hierarchy.md  0x05-registration.md  0x06-data_stream_alignment.md  0x07-target_background_grid.md  0x08-video_window.md  0x09-ca.md  0x0A-iso_639_language.md  0x0B-system_clock.md  0x0C-multiplex_buffer_utilization.md  0x0D-copyright.md  0x0E-maximum_bitrate.md  0x0F-private_data_indicator.md  0x10-smoothing_buffer.md  0x11-std.md  0x12-ibp.md  0x40-network_name.md  0x41-service_list.md  0x42-stuffing.md  0x43-satellite_delivery_system.md  0x44-cable_delivery_system.md  0x45-vbi_data.md  0x46-vbi_teletext.md  0x47-bouquet_name.md  0x48-service.md  0x49-country_availability.md  0x4A-linkage.md  0x4B-nvod_reference.md  0x4C-time_shifted_service.md  0x4D-short_event.md  0x4E-extended_event.md  0x4F-time_shifted_event.md  0x50-component.md  0x51-mosaic.md  0x52-stream_identifier.md  0x53-ca_identifier.md  0x54-content.md  0x55-parental_rating.md  0x56-teletext.md  (+42 more)
dvb-si/docs/tables/: README.md  bat.md  cat.md  dit.md  eit.md  nit.md  pat.md  pmt.md  rst.md  sat.md  sdt.md  sit.md  st.md  tdt.md  tot.md
dvb-si/docs/text/: annex_a.md
dvb-si/examples/: si_dump.rs
dvb-si/registries/: README.md
dvb-si/spec_tables/: descriptor_tag.toml  extension_tag.toml  stream_type.toml  table_id.toml
dvb-si/src/: collect.rs  compatibility.rs  demux.rs  descriptor_tag.rs  epg.rs  error.rs  lib.rs  mux.rs  owned.rs  pid.rs  registry_names.rs  resync.rs  section.rs  table_id.rs  traits.rs  ts.rs
dvb-si/src/carousel/: messages.rs  mod.rs  reassembler.rs
dvb-si/src/collect/: bat.rs  eit.rs  mod.rs  nit.rs  sdt.rs
dvb-si/src/descriptors/: aac.rs  ac3.rs  adaptation_field_data.rs  ancillary_data.rs  announcement_support.rs  any.rs  application_signalling.rs  bouquet_name.rs  ca.rs  ca_identifier.rs  cable_delivery_system.rs  cell_frequency_link.rs  cell_list.rs  component.rs  content.rs  content_identifier.rs  country_availability.rs  data_broadcast.rs  data_broadcast_id.rs  data_stream_alignment.rs  default_authority.rs  dsng.rs  dts.rs  ecm_repetition_rate.rs  enhanced_ac3.rs  extended_event.rs  extension.rs  frequency_list.rs  fta_content_management.rs  iso_639_language.rs  linkage.rs  local_time_offset.rs  logical_channel.rs  mod.rs  mosaic.rs  multilingual_bouquet_name.rs  multilingual_component.rs  multilingual_network_name.rs  multilingual_service_name.rs  network_name.rs  (+33 more)
dvb-si/src/tables/: ait.rs  any.rs  bat.rs  cat.rs  cit.rs  container.rs  dit.rs  downloadable_font_info.rs  dsmcc.rs  eit.rs  int.rs  mod.rs  mpe.rs  mpe_fec.rs  mpe_ifec.rs  nit.rs  pat.rs  pmt.rs  protection_message.rs  rct.rs  registry.rs  rnt.rs  rst.rs  sat.rs  sdt.rs  sit.rs  st.rs  tdt.rs  tot.rs  tsdt.rs  unt.rs
dvb-si/src/text/: mod.rs
dvb-si/tests/: accessors.rs  carousel_fixture.rs  collect.rs  demux.rs  demux_e2e.rs  descriptor_loop.rs  fixture_byte_identity.rs  fixture_parse.rs  hostility.rs  registry.rs  round_trip.rs  serde_round_trip.rs  spec_drift.rs  table_dispatch.rs  yoke.rs
dvb-si/tests/fixtures/: m6-single.ts
dvb-stream/: Cargo.toml
dvb-stream/src/: resync.rs
dvb-t2mi/: CHANGELOG.md  Cargo.toml  README.md
dvb-t2mi/benches/: t2mi_hot_paths.rs
dvb-t2mi/docs/: README.md  spec.md  ts_102_773.md
dvb-t2mi/examples/: t2mi_dump.rs
dvb-t2mi/spec_tables/: aux_stream_type.toml  guard_interval.toml  l1_code_rate.toml  l1_fec_type.toml  l1_modulation.toml  pilot_pattern.toml  plp_fec_type.toml  plp_mode.toml  plp_modulation.toml  plp_payload_type.toml  plp_type.toml  t2_version.toml  tx_input_stream_type.toml
dvb-t2mi/src/: crc.rs  error.rs  inner_ts.rs  lib.rs  packet.rs  payload.rs  pump.rs  traits.rs  ts.rs
dvb-t2mi/src/payload/: any.rs  arbitrary_cells.rs  aux_iq.rs  bbframe.rs  fef_composite.rs  fef_iq.rs  fef_null.rs  fef_subpart.rs  individual_addressing.rs  l1_current.rs  l1_future.rs  (+3 more)
dvb-t2mi/tests/: chain.rs  l1_fixture.rs  pump.rs  real_capture.rs  serde_round_trip.rs  spec_drift.rs
dvb-tools/: CHANGELOG.md  Cargo.toml  README.md
dvb-tools/src/: dump.rs  epg.rs  main.rs  pids.rs  services.rs  t2mi.rs  util.rs
dvb-tools/tests/: smoke.rs
(+105 files in other folders)
