[workspace]
members = ["dvb-common", "dvb-si", "dvb-t2mi", "dvb-bbframe", "dvb-conformance", "dvb-tools", "dvb-scte35", "dvb-stream"]
exclude = ["fuzz"]
resolver = "2"

[workspace.package]
authors = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/fishloa/rust-dvb"
rust-version = "1.75"
