[package]
name    = "dvb-bbframe"
version = "0.1.0"
edition = "2021"
description = "ETSI DVB-S2 / S2X / T2 BBFrame parser + builder."
license      = "MIT"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "bbframe", "s2", "t2", "mpeg"]
categories = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"
exclude      = ["docs/**"]

[dependencies]
dvb-common = { path = "../dvb-common", version = "0.1" }
thiserror  = "2"
num_enum   = "0.7"
