[package]
name    = "dvb-bbframe"
version = "2.1.0"
edition = "2021"
description = "ETSI DVB-S2 / S2X / T2 BBFrame parser + builder."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "bbframe", "s2", "t2", "mpeg"]
categories = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"
exclude = ["docs/**", "tests/fixtures/**", "TODO.md"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
dvb-common = { path = "../dvb-common", version = "2.1" }
thiserror  = "2"
num_enum   = "0.7"
serde      = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
serde = ["dep:serde"]
