[package]
name         = "dvb-common"
version      = "3.1.1"
edition      = "2021"
description  = "Shared Parse/Serialize traits and CRC-32 MPEG-2 used by the dvb_si / dvb_t2mi / dvb_bbframe family."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["dvb", "mpeg", "broadcast", "crc", "parser"]
categories   = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[dependencies]
# intentionally empty — consumers of dvb_common must pay for nothing they
# aren't already paying for in the downstream DVB crates.
