[package]
name         = "dvb-common"
version      = "6.2.0"
edition      = "2021"
description  = "Shared Parse/Serialize traits and CRC-32 MPEG-2 used by the dvb_si / dvb_t2mi / dvb_bbframe family."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["dvb", "mpeg", "broadcast", "crc", "parser"]
categories   = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[features]
# MJD↔calendar conversion for the UTC time codec. Off = the BCD/duration
# helpers remain available; only the chrono-typed UTC functions are gated.
chrono = ["dep:chrono"]

[dependencies]
# Default build stays dependency-free — consumers of dvb_common pay for nothing
# they aren't already paying for downstream. `chrono` is pulled only when the
# `chrono` feature is enabled (e.g. by dvb-si's own `chrono` feature).
chrono = { version = "0.4", optional = true, default-features = false }
