[package]
name         = "dvb-conformance"
version      = "6.5.0"
edition      = "2021"
description  = "ETSI TR 101 290 transport-stream conformance monitor (DVB measurement guidelines)."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["dvb", "mpeg-ts", "conformance", "monitoring"]
categories   = ["multimedia", "parsing"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"

[package.metadata.docs.rs]
all-features = true

[dependencies]
dvb-common = { path = "../dvb-common", version = "6.5" }
dvb-si      = { path = "../dvb-si", version = "6.5.0", features = ["ts", "serde"] }
serde       = { version = "1", optional = true, features = ["derive"] }

[features]
default = ["serde"]

serde = ["dep:serde", "dvb-si/serde"]

[dev-dependencies]
dvb-common = { path = "../dvb-common", version = "6.5" }
