[package]
name         = "dvb-scte35"
version      = "6.3.0"
edition      = "2021"
description  = "ANSI/SCTE 35 2023r1 splice information (Digital Program Insertion cueing) parser + builder."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["scte35", "splice", "ad-insertion", "mpeg", "broadcast"]
categories   = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"
exclude      = ["docs/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
dvb-common = { path = "../dvb-common", version = "6.3" }
thiserror  = "2"
serde      = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
hex        = "0.4"
base64     = "0.22"
serde_json = "1.0"

[features]
default = ["serde"]

# JSON / generic serialization on parsed + owned variants (Serialize-only,
# mirroring the workspace posture — there is no Deserialize).
serde = ["dep:serde"]
