[package]
name         = "dvb-si"
version      = "2.1.0"
edition      = "2021"
description  = "ETSI EN 300 468 DVB Service Information parser + builder. MPEG-2 PSI included."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords     = ["dvb", "mpeg", "broadcast", "si", "psi"]
categories   = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"
exclude      = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
dvb-common  = { path = "../dvb-common", version = "2.1" }
thiserror   = "2"
num_enum    = "0.7"
chrono      = { version = "0.4", optional = true, default-features = false, features = ["clock"] }
serde         = { version = "1", optional = true, features = ["derive"] }
erased-serde  = { version = "0.4", optional = true }
bytes         = { version = "1", optional = true }
encoding_rs = "0.8"

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[features]
default = ["chrono", "ts", "serde"]

# Date/time decoding (MJD + BCD -> chrono DateTime<Utc>). Off = raw bytes returned.
chrono   = ["dep:chrono"]

# MPEG-TS packet + SectionReassembler helpers. Off = bring-your-own section bytes.
ts       = ["dep:bytes"]

# JSON / generic serialization on parsed + owned variants. Propagates to chrono.
serde    = ["dep:serde", "dep:erased-serde", "chrono?/serde"]

# si_dump: demux a .ts (feature `ts`) and emit decoded JSON (feature `serde`).
[[example]]
name              = "si_dump"
required-features = ["ts", "serde"]
