[package]
name    = "dvb-t2mi"
version = "1.1.0"
edition = "2021"
description = "ETSI TS 102 773 DVB-T2 Modulator Interface parser + builder."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "t2mi", "mpeg", "broadcast"]
categories = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"
exclude      = ["docs/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
dvb-common = { path = "../dvb-common", version = "1.1" }
thiserror  = "2"
num_enum   = "0.7"
bytes      = { version = "1", optional = true }
serde      = { version = "1", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["ts"]
ts      = ["dep:bytes"]
serde   = ["dep:serde"]
