[package]
name    = "dvb-t2mi"
version = "6.1.0"
edition = "2021"
description = "ETSI TS 102 773 DVB-T2 Modulator Interface parser + builder."
license      = "MIT OR Apache-2.0"
authors      = ["Alex Fishlock <alex.fishlock@racingjag.com>"]
keywords = ["dvb", "t2mi", "mpeg", "broadcast"]
categories = ["parser-implementations", "multimedia"]
repository   = "https://github.com/fishloa/rust-dvb"
readme       = "README.md"
rust-version = "1.75"
exclude      = ["docs/**", "tests/fixtures/**"]

[package.metadata.docs.rs]
all-features = true

[dependencies]
dvb-common   = { path = "../dvb-common", version = "6.1" }
dvb-bbframe  = { path = "../dvb-bbframe", version = "6.1", optional = true }
erased-serde = { version = "0.4", optional = true }
thiserror    = "2"
num_enum     = "0.7"
bytes        = { version = "1", optional = true }
serde        = { version = "1", optional = true, features = ["derive"] }
yoke         = { version = "0.7", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1.0"
dvb-si     = { path = "../dvb-si", features = ["ts"] }

[features]
default = ["ts"]
# `ts`: the feed-and-iterate pump (feed_ts) and the InnerTsRecovery driver,
# which pulls in `bytes` and the `dvb-bbframe` BBFrame extractor.
ts      = ["dep:bytes", "dep:dvb-bbframe"]
serde   = ["dep:serde", "dep:erased-serde"]

# yoke::Yokeable on the zero-copy payload view types (mirrors dvb-si's `yoke`
# feature) — own a parsed T2-MI payload past the input buffer's borrow.
yoke    = ["dep:yoke"]
